<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etSearchP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Search"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSearchP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/Searchh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvNameP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:text="@string/namee"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvUsernameP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:text="@string/user"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvEmailP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:text="@string/emailaddress"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDobP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:text="@string/Birth"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGenderP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:text="@string/sex"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnEditP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="80px"
        android:layout_marginRight="20px"
        android:text="@string/edit" />

    <Button
        android:id="@+id/btnDeleteP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="25px"
        android:layout_marginRight="20px"
        android:text="@string/del" />
</LinearLayout>