<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Edit">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="@string/editprofile"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/etUsernameEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usernamee"
        android:textAlignment="center"
        android:textColor="#686868"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etNameEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="40px"
        android:layout_marginRight="20px"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmailEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etDobEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date" />

    <EditText
        android:id="@+id/etPasswordEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:layout_marginRight="20px"
        android:text="@string/gender"
        android:textColor="#686868"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbMaleEP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130px"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemaleEP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130px"
            android:text="@string/female" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEditEP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>